src/parse/snapshots/dilaria__parse__test__r#if__empty.snap
---
source: src/parse/test.rs
assertion_line: 130
expression: ast

---
IfStmt {
    span: Span {
        start: 0,
        end: 0,
    },
    cond: Literal(
        Boolean(
            true,
            Span {
                start: 0,
                end: 0,
            },
        ),
    ),
    body: Block {
        stmts: [],
        span: Span {
            start: 0,
            end: 0,
        },
    },
    else_part: None,
}
