src/parse/snapshots/dilaria__parse__test__r#if__if_else_if.snap
---
source: src/parse/test.rs
expression: ast
---
IfStmt {
    span: Span(
        0..0,
    ),
    cond: Literal(
        Boolean(
            true,
            Span(
                0..0,
            ),
        ),
    ),
    body: Block {
        stmts: [],
        span: Span(
            0..0,
        ),
    },
    else_part: Some(
        ElseIf(
            IfStmt {
                span: Span(
                    0..0,
                ),
                cond: Literal(
                    Boolean(
                        true,
                        Span(
                            0..0,
                        ),
                    ),
                ),
                body: Block {
                    stmts: [],
                    span: Span(
                        0..0,
                    ),
                },
                else_part: None,
            },
            Span(
                0..0,
            ),
        ),
    ),
}
